2001-12-01  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02601]
	* Makefile (install-core): added
	* Makefile (install-helpfile): added
	* configure (use_help_cgi): default yes if perl found
	* configure (config.h): add HELP_CGI
	* configure (config.h): add $def_use_help_cgi
	* main.c (ldhelp): add USE_HELP_CGI code
	* scripts/Makefile: use w3mhelp*.pl.in
	* scripts/w3mhelp-funcname.pl.in: added
	* scripts/w3mhelp-funcdesc.en.pl.in: added
	* scripts/w3mhelp-funcdesc.ja.pl.in: added
	* scripts/w3mhelp.cgi.in: use %buf_*, %lineedit_*
	* scripts/w3mhelp.cgi.in: use %title

	* [w3m-dev 02660] (based on [w3m-dev 02577] 
			by Kiyokazu SUTO <suto@ks-and-ks.ne.jp>)
	* scripts/.cvsignore: add w3mhelp.cgi w3mhelp-*.pl
	* scripts/Makefile (HELP_DIR): added
	* scripts/Makefile (LIB_TARGETS): add w3mhelp.cgi
	* scripts/Makefile (DOCDIRS): added
	* scripts/Makefile (all): add helplibs
	* scripts/Makefile (.in): subst HELP_DIR, DOCDIRS
	* scripts/Makefile (helplibs): added
	* scripts/Makefile (install): s/DISTDIR/DESTDIR/
	* scripts/Makefile (install): install w3mhelp-*.pl
	
	* scripts/w3mhelp.cgi.in: added

	* XMakefile (INSTALL2): deleted
	* XMakefile (install): split
	* XMakefile (install-core): added
	* XMakefile (install-helpfile): added
	* XMakefile (all-scripts): HELP_DIR
	* XMakefile (install-scripts): HELP_DIR

	* doc/REAMDE.func: add ALARM, SUSPEND
	* doc-jp/README.func: ditto
	
	* config.h.dist: updated

2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* url.c (otherinfo): use AcceptLang
	* rc.c (sync_with_option): initialize AcceptLang

2001-11-30  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02599]
	* main.c comment reformat

2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02598]
	* url.c (otherinfo): add missing NULL

2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02597] (based on [w3m-dev 02594] by aito@fw.ipsj.or.jp)
	* fm.h (AcceptLang): added
	* fm.h (AcceptMedia): added
	* rc.c (CMT_ACCEPTENCODING): added